--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,20 @@ header .container .left-content .live-link{
     background: #C5357F;
     padding: 16px 25px;
     border-radius: 5px;
+    transition: all 1s ease;
 }
+header .container .left-content .live-link:hover{
+    background: #fff;
+    color:#161616;
+    padding:16px 34px;
+}
+
 header .container .left-content a i{
     margin-left: 10px;
+    transition: margin .5s ease;
+}
+header .container .left-content .live-link:hover i{
+    margin-left: 25px;
 }
 header .container .right-image{
     width: 50%;
@@ -233,4 +244,52 @@ footer .menu a{
     color: rgba(255, 255, 255, 0.9);
     margin-right: 24px;
     text-decoration: none;
+}
+
+/*****Upcoming match*****/
+.flag{
+    margin-left: 24px;
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    grid-gap: 24px;
+    
+}
+.flag .blog{
+    width: 312px;
+    height: 242px;
+    border: 1px solid #E8E8E8;
+    border-radius: 10px;
+   
+}
+.flag .blog .image-part{
+    display: flex;
+    justify-content: center;
+    margin-top: 53px;
+}
+.flag .blog .image-part h4{
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 24px;
+    color: #161616;
+    margin: 0px 20px;
+    display: flex;
+    align-items: center;
+}
+.flag .blog h3{
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 30px;
+    color: #161616;
+    text-align: center;
+    margin: 30px 0px 20px 0px;
+}
+.flag .blog p{
+    color: #4D4D4D;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
 }
