--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,6 @@
 body{
     margin: 0;
     padding: 0;
-  
     font-family: 'Roboto', sans-serif;
 }
 .container{
@@ -307,6 +306,7 @@ footer .menu a{
             width: 100%;
         }
         header,main,footer{
+            overflow-x: hidden!important;
             padding: 0px 50px;
         }
         /******Header section *****/
@@ -334,6 +334,7 @@ footer .menu a{
         /******Main section *****/
         main{
             flex-direction: column;
+            align-items: center;
         }
         main .container{
             flex-direction: column;
@@ -411,9 +412,7 @@ footer .menu a{
         header .container .right-image {
             padding: 68px 17px 0px 4px;
         }
-         html{
-            overflow: hidden!important;
-        }
+         
     }
 
     /*********************
@@ -425,19 +424,23 @@ footer .menu a{
             width: 100%;
         }
         header,main,footer{
-            padding: 0px 50px;
+            padding: 0px 20px;
         }
         /******Header section *****/
         header .container{
-            margin: 50px 0px 70px 0px;
+            margin: 30px 0px 30px 0px;
+            flex-direction: column;
+            align-items: center;
+            padding: 28px 38px 0px 38px;
         }
         header .container .left-content {
-            padding: 61px 0px 61px 76px;
+            padding: 0px;
+            text-align: center;
+            width: 100%;
         }
         header .container h1 {
-            font-weight: 700;
-            font-size: 40px;
-            line-height: 50px;
+            font-size: 27px;
+            line-height: 33px;
         }
         header .container p {
             font-weight: 400;
@@ -448,6 +451,13 @@ footer .menu a{
             font-weight: 400;
             font-size: 2px;
             line-height: 23px;
+        }
+        header .container .right-image {
+            width: 100%;
+            padding: 28px 0px 0px 4px;
+        }
+        header .container .right-image img{
+            margin-left: 20px;
         }
         /******Main section *****/
         main{
@@ -463,7 +473,9 @@ footer .menu a{
             background: transparent;
         }
         .button{
-            margin-bottom: 30px;
+            margin-bottom: 24px;
+            margin-top: 24px;
+            flex-direction: column;
         }
         .button a{
             padding: 0px!important;
@@ -477,12 +489,13 @@ footer .menu a{
             border-radius: 10px;
         }
         .button .all{
-            margin: 0px 20px!important;
+            margin: 20px 0px!important;
         }
         main .container .aside .button{
             flex-direction: row;
             width: 100%;
             height: auto;
+            flex-direction: column;
         }
         main .container .aside .button #blog{
             background: #C5357F;
@@ -494,8 +507,8 @@ footer .menu a{
         }
         .blogs {
             margin-left: 0px;
-            grid-template-columns: repeat(2,1fr);
-            grid-gap: 20px;
+            grid-template-columns: repeat(1,1fr);
+            grid-gap: 14px;
         }
         .blogs img{
             width: 100%;
@@ -510,26 +523,21 @@ footer .menu a{
         }
         /******Footer section*******/
         footer{
-            margin-top: 70px;
-            padding-bottom: 55px;
+            margin-top: 50px;
+            padding-bottom: 24px;
         }
         footer h2{
-            padding-bottom: 30px;
-            margin-bottom: 30px;
-            margin-top: 70px;
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+            margin-top: 24px;
         }
         footer .menu{
-            max-width: 635px;
-            margin: 0 auto;
+           display: flex;
+           justify-content: center;
+           align-items: center;
         }
         footer .menu a{
-            margin-right: 50px;
+            margin-right: 0px;
             line-height: 40px;
-        }
-        header .container .right-image {
-            padding: 68px 17px 0px 4px;
-        }
-         html{
-            overflow: hidden!important;
         }
     }
